# django-cmd

./: .gitignore  .travis.yml  HISTORY.rst  README.rst  django_cmd.py  django_cmd_test.py  pyproject.toml  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  lint.yml  publish.yml
src/: django_cmd.py
tests/: django_cmd_test.py
