[project]
name = "django-cmd"
version = "2.2"
description = "Have a django command"
authors = [{ name = "Ryan Hiebert", email = "ryan@ryanhiebert.com" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = ["Django", 'tomli; python_version < "3.11"']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 2",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
]

[project.urls]
homepage = "https://github.com/ryanhiebert/django-cmd"
repository = "https://github.com/ryanhiebert/django-cmd"

[project.scripts]
django = "django_cmd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest", "pytest-mock", "coverage", "ruff", "isort"]

[tool.coverage.run]
branch = true
source = "django_cmd"
